@@ -69,6 +69,8 @@ indexpage:
 #
     - title: "SnapCenter for Databases"
       links:
+        - title: "SnapCenter Oracle Clone Lifecycle"
+          url: /automation_ora_clone_lifecycle.html
         - title: "Oracle Database Backup, Recovery, and Clone on ANF with SnapCenter"
           url: /snapctr_ora_azure_anf.html    
         - title: "Oracle Backup, Restore and Clone with SnapCenter Services - Azure" 
@@ -80,6 +82,8 @@ indexpage:
 #
     - title: "DB Automation Toolkits"
       links:
+        - title: "SnapCenter Oracle Clone Lifecycle"
+          url: /automation_ora_clone_lifecycle.html
         - title: "Oracle Migration"
           url: /automation_ora_migration.html
         - title: "Oracle HA/DR with AWS FSx ONTAP"
